# opengl-demo1

./: CMakeLists.txt
shaders/: fragment_shader.glsl
src/: main.c  sdl2-gl-utils.c  sdl2-gl-utils.h
